Migration Developed, Views replaced

--- a/AutoConfiguratorApp/appsettings.Development.json
+++ b/AutoConfiguratorApp/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=CmdAPI;Pooling=true;"
+    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=AutoConfDB;Pooling=true;"
   }
 }
