Connection String through IConfigutation fixed

--- a/src/AutoConfiguratorApp/appsettings.Development.json
+++ b/src/AutoConfiguratorApp/appsettings.Development.json
@@ -1,12 +1,13 @@
 {
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=AutoConfDB;Username=postgres;Password=!Kbn1988;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "ConnectionStrings": {
-    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=AutoConfDB;Pooling=true;"
   }
+
 }
