--- a/src/AutoConfiguratorApp/appsettings.json
+++ b/src/AutoConfiguratorApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=AutoConfDB;Username=postgres;Password=!Kbn1988;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,8 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=AutoConfDB;Pooling=true;"
-  }
+  "AllowedHosts": "*"
 }
